--- a/build.gradle
+++ b/build.gradle
@@ -17,10 +17,9 @@ buildscript {
 
 ext {
     retrofit_version = '2.3.0'
-    rxjava2_version = '2.1.8'
-    rxandroid_version = '2.0.1'
-    dagger2_version = '2.17'
     support_version = '28.0.0'
+    picasso_version = '2.71828'
+    support_version = '27.1.0'
 }
 
 allprojects {
